--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
+    "@eva-design/eva": "^2.2.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/date-fns": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "@ui-kitten/moment": "^5.3.1",
+    "expo": "^48.0.16",
+    "expo-av": "~13.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-modules-core": "~1.2.7",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
+    "ky": "^0.32.2",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
