--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/date-fns": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
@@ -24,6 +25,7 @@
     "ky": "^0.32.2",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-storage": "^1.0.1",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
